Fix Layout breaking on overflow

--- a/frontend/src/routes/Layout.module.css
+++ b/frontend/src/routes/Layout.module.css
@@ -7,4 +7,5 @@
 
 .contentContainer {
     height: 100%;
+    overflow: hidden;
 }
